--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <link rel="dns-prefetch" href="https://tracker.metricool.com">
   
   <!-- Preload ressources critiques -->
-  <link rel="preload" href="accueil11.png" as="image" type="image/png" fetchpriority="high">
   <link rel="preload" href="logo.png" as="image" type="image/png">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" as="style">
   <!-- Google tag (gtag.js) -->
@@ -3134,7 +3133,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
       <div class="hero-img">
-        <img src="accueil11.png" alt="Transformation digitale" width="600" height="400" fetchpriority="high">
+        <img src="accueil11.png" alt="Transformation digitale" width="600" height="400" loading="eager">
       </div>
     </div>
   </section>
