--- a/index.html
+++ b/index.html
@@ -3133,7 +3133,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
       <div class="hero-img">
-        <img src="accueil11.png" alt="Transformation digitale" width="600" height="400" loading="eager">
+        <img src="accueil11.avif" alt="Transformation digitale" width="600" height="400" loading="eager">
       </div>
     </div>
   </section>
