--- a/index.html
+++ b/index.html
@@ -3132,9 +3132,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <!-- <a href="#realisations" class="btn btn-primary"><i class="fas fa-briefcase"></i> Nos réalisations</a> -->
         </div>
       </div>
-      <div class="hero-img">
-        <img src="accueil11.avif" alt="Transformation digitale" width="600" height="400" loading="eager">
-      </div>
+      <picture>
+  <source srcset="accueil11.webp" type="image/webp">
+  <img src="accueil11.png" alt="Transformation digitale" width="600" height="400" loading="eager">
+</picture>
     </div>
   </section>
 
