article du mois de fevrier

--- a/blog.html
+++ b/blog.html
@@ -768,7 +768,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section class="blog-section">
     <div class="container">
       <div class="blog-grid">
-        <!-- Article 1 - Transformation Digitale -->
+        <!-- Article 1 - Digitalisation École LMS -->
+        <div class="blog-card">
+          <div class="blog-card-img">
+            <img src="elite-science.png" alt="Digitalisation école Sénégal plateforme LMS">
+          </div>
+          <div class="blog-card-content">
+            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 24 février 2025 • <i class="far fa-folder"></i> Éducation Numérique</div>
+            <h3>Comment digitaliser une école au Sénégal : Le guide complet de la plateforme LMS</h3>
+            <p>Découvrez les 5 étapes clés pour transformer votre école traditionnelle en institution connectée avec une plateforme LMS adaptée au contexte sénégalais.</p>
+            <a href="digitalisation_ecole_lms.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
+          </div>
+        </div>
+
+        <!-- Article 2 - Transformation Digitale -->
         <div class="blog-card">
           <div class="blog-card-img">
             <img src="transformation-digital.jpg" alt="Transformation digitale des entreprises africaines">
