--- a/index.html
+++ b/index.html
@@ -4604,20 +4604,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p style="color: white;font-weight: 30px;">Découvrez nos derniers articles et conseils pour réussir votre transformation digitale</p>
       </div>
       <div class="blog-grid">
-        <!-- Article 1 - Transformation Digitale -->
+        <!-- Article 1 - Digitalisation École LMS -->
+        <div class="blog-card">
+          <div class="blog-card-img">
+            <img src="elite-science.png" alt="Digitalisation école Sénégal plateforme LMS">
+          </div>
+          <div class="blog-card-content">
+            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 24 février 2026 • <i class="far fa-folder"></i> Éducation Numérique</div>
+            <h3>Comment digitaliser une école au Sénégal : Le guide complet de la plateforme LMS</h3>
+            <p>Découvrez les 5 étapes clés pour transformer votre école traditionnelle en institution connectée avec une plateforme LMS adaptée au contexte sénégalais.</p>
+            <a href="digitalisation_ecole_lms.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
+          </div>
+        </div>
+
+        <!-- Article 2 - Transformation Digitale -->
         <div class="blog-card">
           <div class="blog-card-img">
             <img src="transformation-digital.jpg" alt="Transformation digitale des entreprises africaines">
           </div>
           <div class="blog-card-content">
-            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 16 décembre 2025 • <i class="far fa-folder"></i> Transformation Digitale</div>
+            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 16 décembre 2026 • <i class="far fa-folder"></i> Transformation Digitale</div>
             <h3>Pourquoi la transformation digitale est un levier indispensable pour les entreprises africaines aujourd'hui</h3>
             <p>Dans un monde de plus en plus connecté, la transformation digitale n'est plus une option, mais une nécessité pour les entreprises africaines et sénégalaises.</p>
             <a href="transformation_digitale.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
           </div>
         </div>
 
-        <!-- Article 2 -->
+        <!-- Article 3 -->
         <div class="blog-card">
           <div class="blog-card-img">
             <img src="blo.jpg" alt="Sécurité WordPress - cadenas sur écran">
@@ -4627,21 +4640,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Sécuriser son site WordPress</h3>
             <p>Protégez votre site WordPress contre les piratages avec 10 conseils simples et efficaces, accessibles à tous.</p>
             <a href="wordpress.html" class="btn btn-secondary" id="openWpModal"><i class="fas fa-book-open"></i> Lire l'article</a>
-          </div>
-        </div>
-  
-        
-  
-        <!-- Article 3 -->
-        <div class="blog-card">
-          <div class="blog-card-img">
-            <img src="CLE.jpg" alt="SEO outils mots-clés - ordinateur avec graphique et loupe">
-          </div>
-          <div class="blog-card-content">
-            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 5 juin 2025 • <i class="far fa-folder"></i> SEO</div>
-            <h3>SEO : 14 outils gratuits pour trouver des mots-clés pertinents</h3>
-            <p>Voici 14 outils gratuits pour trouver les meilleurs mots-clés et booster votre référencement sur Google.</p>
-            <a href="seo_outil.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
           </div>
         </div>
       </div>
