--- a/transformation_digitale.html
+++ b/transformation_digitale.html
@@ -310,11 +310,17 @@
     </div>
 
     <div class="blog-articles">
-      <h2>Autres articles</h2>
+      <h2>Articles récents</h2>
 
       <div class="blog-article-item">
-        <div class="blog-article-title">Algorithme Google SEO 2024 : 10 astuces pour être visible</div>
-        <p>Découvrez les nouvelles règles Google pour 2024 et 10 astuces pour rendre votre site visible et performant.</p>
+        <div class="blog-article-title">Comment digitaliser une école au Sénégal : Le guide complet de la plateforme LMS</div>
+        <p>Découvrez les 5 étapes clés pour transformer votre école traditionnelle en institution connectée avec une plateforme LMS adaptée au contexte sénégalais.</p>
+        <a class="blog-article-link" href="digitalisation_ecole_lms.html">Lire l'article →</a>
+      </div>
+
+      <div class="blog-article-item">
+        <div class="blog-article-title">Algorithme Google SEO 2025 : 10 astuces pour être visible</div>
+        <p>Découvrez les nouvelles règles Google pour 2025 et 10 astuces pour rendre votre site visible et performant.</p>
         <a class="blog-article-link" href="visible_seo.html">Lire l'article →</a>
       </div>
 
@@ -322,6 +328,12 @@
         <div class="blog-article-title">Sécuriser son site WordPress</div>
         <p>Protégez votre site WordPress contre les piratages avec 10 conseils simples et efficaces.</p>
         <a class="blog-article-link" href="wordpress.html">Lire l'article →</a>
+      </div>
+
+      <div class="blog-article-item">
+        <div class="blog-article-title">SEO : 14 outils gratuits pour trouver des mots-clés pertinents</div>
+        <p>Voici 14 outils gratuits pour trouver les meilleurs mots-clés et booster votre référencement sur Google.</p>
+        <a class="blog-article-link" href="seo_outil.html">Lire l'article →</a>
       </div>
     </div>
   </main>
