--- a/index.html
+++ b/index.html
@@ -4607,7 +4607,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Article 1 - Digitalisation École LMS -->
         <div class="blog-card">
           <div class="blog-card-img">
-            <img src="elite-science.png" alt="Digitalisation école Sénégal plateforme LMS">
+            <img src="digitalisation_ecole_lms.jpeg" alt="Digitalisation école Sénégal plateforme LMS">
           </div>
           <div class="blog-card-content">
             <div class="blog-meta"><i class="far fa-calendar-alt"></i> 24 février 2026 • <i class="far fa-folder"></i> Éducation Numérique</div>
